fix: hide file storage internals from HTTP responses
